resolutions of sonar issues